Adding the charts to the demo of the dashboard

--- a/dashboard/templates/pages/home.html
+++ b/dashboard/templates/pages/home.html
@@ -29,7 +29,9 @@
 
 
                         {% include "pages/stats.html" %}
+                        {% include "pages/charts.html" %}
                         {% include "pages/pricing.html" %}
+                        
 
                     </div>
 
