Adding responsiveness to the whole app

--- a/dashboard/templates/pages/charts.html
+++ b/dashboard/templates/pages/charts.html
@@ -1,148 +1,148 @@
 {% load static %}
 
-<!--begin::Entry-->
-<div class="d-flex flex-column-fluid">
-    <!--begin::Container-->
-    <div class="container">
-        <!--begin::Row-->
-        <div class="row">
-            <div class="col-xl-6">
-                <!--begin::Charts Widget 1-->
-                <div class="card card-custom card-stretch gutter-b">
-                    <!--begin::Header-->
-                    <div class="card-header h-auto border-0">
-                        <!--begin::Title-->
-                        <div class="card-title py-5">
-                            <h3 class="card-label">
-                                <span class="d-block text-dark font-weight-bolder">Recent Stats</span>
-                                <span class="d-block text-muted mt-2 font-size-sm">More than 400+ new members</span>
-                            </h3>
-                        </div>
-                        <!--end::Title-->
-                        <!--begin::Toolbar-->
-                        <div class="card-toolbar">
-                            <div class="dropdown dropdown-inline">
-                                <a href="#" class="btn btn-clean btn-hover-light-primary btn-sm btn-icon" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="ki ki-bold-more-hor"></i>
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-md dropdown-menu-right">
-                                    <!--begin::Naviigation-->
-                                    <ul class="navi">
-                                        <li class="navi-header font-weight-bold py-5">
-                                            <span class="font-size-lg">Add New:</span>
-                                            <i class="flaticon2-information icon-md text-muted" data-toggle="tooltip" data-placement="right" title="Click to learn more..."></i>
-                                        </li>
-                                        <li class="navi-separator mb-3 opacity-70"></li>
-                                        <li class="navi-item">
-                                            <a href="#" class="navi-link">
-                                                <span class="navi-icon">
-                                                    <i class="flaticon2-shopping-cart-1"></i>
-                                                </span>
-                                                <span class="navi-text">Order</span>
-                                            </a>
-                                        </li>
-                                        <li class="navi-item">
-                                            <a href="#" class="navi-link">
-                                                <span class="navi-icon">
-                                                    <i class="navi-icon flaticon2-calendar-8"></i>
-                                                </span>
-                                                <span class="navi-text">Members</span>
-                                                <span class="navi-label">
-                                                    <span class="label label-light-danger label-rounded font-weight-bold">3</span>
-                                                </span>
-                                            </a>
-                                        </li>
-                                        <li class="navi-item">
-                                            <a href="#" class="navi-link">
-                                                <span class="navi-icon">
-                                                    <i class="navi-icon flaticon2-telegram-logo"></i>
-                                                </span>
-                                                <span class="navi-text">Project</span>
-                                            </a>
-                                        </li>
-                                        <li class="navi-item">
-                                            <a href="#" class="navi-link">
-                                                <span class="navi-icon">
-                                                    <i class="navi-icon flaticon2-new-email"></i>
-                                                </span>
-                                                <span class="navi-text">Record</span>
-                                                <span class="navi-label">
-                                                    <span class="label label-light-success label-rounded font-weight-bold">5</span>
-                                                </span>
-                                            </a>
-                                        </li>
-                                        <li class="navi-separator mt-3 opacity-70"></li>
-                                        <li class="navi-footer pt-5 pb-4">
-                                            <a class="btn btn-light-primary font-weight-bolder btn-sm" href="#">More options</a>
-                                            <a class="btn btn-clean font-weight-bold btn-sm d-none" href="#" data-toggle="tooltip" data-placement="right" title="Click to learn more...">Learn more</a>
-                                        </li>
-                                    </ul>
-                                    <!--end::Naviigation-->
+    <!--begin::Entry-->
+    <div class="d-flex flex-column-fluid">
+        <!--begin::Container-->
+        <div class="container">
+            <!--begin::Row-->
+            <div class="row">
+                <div class="col-xl-6">
+                    <!--begin::Charts Widget 1-->
+                    <div class="card card-custom card-stretch gutter-b">
+                        <!--begin::Header-->
+                        <div class="card-header h-auto border-0">
+                            <!--begin::Title-->
+                            <div class="card-title py-5">
+                                <h3 class="card-label">
+                                    <span class="d-block text-dark font-weight-bolder">Recent Affiliate Stats</span>
+                                    <span class="d-block text-muted mt-2 font-size-sm">More than 400+ new members</span>
+                                </h3>
+                            </div>
+                            <!--end::Title-->
+                            <!--begin::Toolbar-->
+                            <div class="card-toolbar">
+                                <div class="dropdown dropdown-inline">
+                                    <a href="#" class="btn btn-clean btn-hover-light-primary btn-sm btn-icon" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <i class="ki ki-bold-more-hor"></i>
+                                    </a>
+                                    <div class="dropdown-menu dropdown-menu-md dropdown-menu-right">
+                                        <!--begin::Naviigation-->
+                                        <ul class="navi">
+                                            <li class="navi-header font-weight-bold py-5">
+                                                <span class="font-size-lg">Add New:</span>
+                                                <i class="flaticon2-information icon-md text-muted" data-toggle="tooltip" data-placement="right" title="Click to learn more..."></i>
+                                            </li>
+                                            <li class="navi-separator mb-3 opacity-70"></li>
+                                            <li class="navi-item">
+                                                <a href="#" class="navi-link">
+                                                    <span class="navi-icon">
+                                                        <i class="flaticon2-shopping-cart-1"></i>
+                                                    </span>
+                                                    <span class="navi-text">Order</span>
+                                                </a>
+                                            </li>
+                                            <li class="navi-item">
+                                                <a href="#" class="navi-link">
+                                                    <span class="navi-icon">
+                                                        <i class="navi-icon flaticon2-calendar-8"></i>
+                                                    </span>
+                                                    <span class="navi-text">Members</span>
+                                                    <span class="navi-label">
+                                                        <span class="label label-light-danger label-rounded font-weight-bold">3</span>
+                                                    </span>
+                                                </a>
+                                            </li>
+                                            <li class="navi-item">
+                                                <a href="#" class="navi-link">
+                                                    <span class="navi-icon">
+                                                        <i class="navi-icon flaticon2-telegram-logo"></i>
+                                                    </span>
+                                                    <span class="navi-text">Project</span>
+                                                </a>
+                                            </li>
+                                            <li class="navi-item">
+                                                <a href="#" class="navi-link">
+                                                    <span class="navi-icon">
+                                                        <i class="navi-icon flaticon2-new-email"></i>
+                                                    </span>
+                                                    <span class="navi-text">Record</span>
+                                                    <span class="navi-label">
+                                                        <span class="label label-light-success label-rounded font-weight-bold">5</span>
+                                                    </span>
+                                                </a>
+                                            </li>
+                                            <li class="navi-separator mt-3 opacity-70"></li>
+                                            <li class="navi-footer pt-5 pb-4">
+                                                <a class="btn btn-light-primary font-weight-bolder btn-sm" href="#">More options</a>
+                                                <a class="btn btn-clean font-weight-bold btn-sm d-none" href="#" data-toggle="tooltip" data-placement="right" title="Click to learn more...">Learn more</a>
+                                            </li>
+                                        </ul>
+                                        <!--end::Naviigation-->
+                                    </div>
                                 </div>
                             </div>
+                            <!--end::Toolbar-->
                         </div>
-                        <!--end::Toolbar-->
+                        <!--end::Header-->
+                        <!--begin::Body-->
+                        <div class="card-body">
+                            <!--begin::Chart-->
+                            <div id="kt_charts_widget_1_chart"></div>
+                            <!--end::Chart-->
+                        </div>
+                        <!--end::Body-->
                     </div>
-                    <!--end::Header-->
-                    <!--begin::Body-->
-                    <div class="card-body">
-                        <!--begin::Chart-->
-                        <div id="kt_charts_widget_1_chart"></div>
-                        <!--end::Chart-->
-                    </div>
-                    <!--end::Body-->
+                    <!--end::Charts Widget 1-->
                 </div>
-                <!--end::Charts Widget 1-->
-            </div>
-            <div class="col-xl-6">
-                <!--begin::Charts Widget 2-->
-                <div class="card card-custom bg-gray-100 card-stretch gutter-b">
-                    <!--begin::Header-->
-                    <div class="card-header h-auto border-0">
-                        <!--begin::Title-->
-                        <div class="card-title py-5">
-                            <h3 class="card-label">
-                                <span class="d-block text-dark font-weight-bolder">Recent Orders</span>
-                                <span class="d-block text-dark-50 mt-2 font-size-sm">More than 500+ new orders</span>
-                            </h3>
+                <div class="col-xl-6">
+                    <!--begin::Charts Widget 2-->
+                    <div class="card card-custom bg-gray-100 card-stretch gutter-b">
+                        <!--begin::Header-->
+                        <div class="card-header h-auto border-0">
+                            <!--begin::Title-->
+                            <div class="card-title py-5">
+                                <h3 class="card-label">
+                                    <span class="d-block text-dark font-weight-bolder">Recent Affiliate Orders</span>
+                                    <span class="d-block text-dark-50 mt-2 font-size-sm">More than 500+ new orders</span>
+                                </h3>
+                            </div>
+                            <!--end::Title-->
+                            <!--begin::Toolbar-->
+                            <div class="card-toolbar">
+                                <ul class="nav nav-pills nav-pills-sm nav-dark-75" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link py-2 px-4" data-toggle="tab" href="#kt_charts_widget_2_chart_tab_1">
+                                            <span class="nav-text font-size-sm">Month</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link py-2 px-4" data-toggle="tab" href="#kt_charts_widget_2_chart_tab_2">
+                                            <span class="nav-text font-size-sm">Week</span>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link py-2 px-4 active" data-toggle="tab" href="#kt_charts_widget_2_chart_tab_3">
+                                            <span class="nav-text font-size-sm">Day</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!--end::Toolbar-->
                         </div>
-                        <!--end::Title-->
-                        <!--begin::Toolbar-->
-                        <div class="card-toolbar">
-                            <ul class="nav nav-pills nav-pills-sm nav-dark-75" role="tablist">
-                                <li class="nav-item">
-                                    <a class="nav-link py-2 px-4" data-toggle="tab" href="#kt_charts_widget_2_chart_tab_1">
-                                        <span class="nav-text font-size-sm">Month</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link py-2 px-4" data-toggle="tab" href="#kt_charts_widget_2_chart_tab_2">
-                                        <span class="nav-text font-size-sm">Week</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link py-2 px-4 active" data-toggle="tab" href="#kt_charts_widget_2_chart_tab_3">
-                                        <span class="nav-text font-size-sm">Day</span>
-                                    </a>
-                                </li>
-                            </ul>
+                        <!--end::Header-->
+                        <!--begin::Body-->
+                        <div class="card-body">
+                            <!--begin::Chart-->
+                            <div id="kt_charts_widget_2_chart"></div>
+                            <!--end::Chart-->
                         </div>
-                        <!--end::Toolbar-->
+                        <!--end::Body-->
                     </div>
-                    <!--end::Header-->
-                    <!--begin::Body-->
-                    <div class="card-body">
-                        <!--begin::Chart-->
-                        <div id="kt_charts_widget_2_chart"></div>
-                        <!--end::Chart-->
-                    </div>
-                    <!--end::Body-->
+                    <!--end::Charts Widget 2-->
                 </div>
-                <!--end::Charts Widget 2-->
             </div>
+            <!--end::Row-->
         </div>
-        <!--end::Row-->
+        <!--end::Container-->
     </div>
-    <!--end::Container-->
-</div>
-<!--end::Entry-->
+    <!--end::Entry-->
