--- a/dashboard/templates/pages/stats.html
+++ b/dashboard/templates/pages/stats.html
@@ -3,7 +3,7 @@
 {% block content %}
 
         
-        <div class="d-flex flex-column-fluid mt-n16">
+        <div class="d-flex flex-column-fluid">
             <!--begin::Container-->
             <div class="container">
                 <!--Begin::Row-->
