--- a/dashboard/templates/partials/_header.html
+++ b/dashboard/templates/partials/_header.html
@@ -156,6 +156,7 @@
 					<div class="dropdown-menu p-0 m-0 dropdown-menu-anim-up dropdown-menu-sm dropdown-menu-right">
 
 						<!--[html-partial:include:{"file":"partials/_extras/dropdown/languages.html"}]/-->
+						{% include 'partials/_extras/dropdown/languages.html' %}
 					</div>
 
 					<!--end::Dropdown-->
