Adding app to repository

--- a/dashboard/templates/partials/_extras/offcanvas/quick-cart.html
+++ b/dashboard/templates/partials/_extras/offcanvas/quick-cart.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 <!--begin::Quick Cart-->
 		<div id="kt_quick_cart" class="offcanvas offcanvas-right p-10">
 
@@ -21,12 +21,12 @@
 					<!--begin::Item-->
 					<div class="d-flex align-items-center justify-content-between py-8">
 						<div class="d-flex flex-column mr-2">
-							<a href="#" class="font-weight-bold text-dark-75 font-size-lg text-hover-primary">iBlender</a>
-							<span class="text-muted">The best kitchen gadget in 2020</span>
+							<a href="#" class="font-weight-bold text-dark-75 font-size-lg text-hover-primary">Moyoinc.org</a>
+							<span class="text-muted">New domain registration</span>
 							<div class="d-flex align-items-center mt-2">
-								<span class="font-weight-bold mr-1 text-dark-75 font-size-lg">$ 350</span>
+								<span class="font-weight-bold mr-1 text-dark-75 font-size-lg">$ 18</span>
 								<span class="text-muted mr-1">for</span>
-								<span class="font-weight-bold mr-2 text-dark-75 font-size-lg">5</span>
+								<span class="font-weight-bold mr-2 text-dark-75 font-size-lg">1</span>
 								<a href="#" class="btn btn-xs btn-light-success btn-icon mr-2">
 									<i class="ki ki-minus icon-xs"></i>
 								</a>
@@ -35,9 +35,9 @@
 								</a>
 							</div>
 						</div>
-						<a href="#" class="symbol symbol-70 flex-shrink-0">
-							<img src="assets/media/stock-600x400/img-1.jpg" title="" alt="" />
-						</a>
+						<span class="symbol symbol-lg-60 symbol-40 symbol-light-success">
+							<span class="symbol-label font-size-h2 font-weight-bold">.org</span>
+						</span>
 					</div>
 
 					<!--end::Item-->
@@ -50,12 +50,12 @@
 					<!--begin::Item-->
 					<div class="d-flex align-items-center justify-content-between py-8">
 						<div class="d-flex flex-column mr-2">
-							<a href="#" class="font-weight-bold text-dark-75 font-size-lg text-hover-primary">SmartCleaner</a>
-							<span class="text-muted">Smart tool for cooking</span>
+							<a href="#" class="font-weight-bold text-dark-75 font-size-lg text-hover-primary">Hosting</a>
+							<span class="text-muted">Interserver Hosting</span>
 							<div class="d-flex align-items-center mt-2">
-								<span class="font-weight-bold mr-1 text-dark-75 font-size-lg">$ 650</span>
+								<span class="font-weight-bold mr-1 text-dark-75 font-size-lg">$ 5</span>
 								<span class="text-muted mr-1">for</span>
-								<span class="font-weight-bold mr-2 text-dark-75 font-size-lg">4</span>
+								<span class="font-weight-bold mr-2 text-dark-75 font-size-lg">12</span>
 								<a href="#" class="btn btn-xs btn-light-success btn-icon mr-2">
 									<i class="ki ki-minus icon-xs"></i>
 								</a>
@@ -64,9 +64,21 @@
 								</a>
 							</div>
 						</div>
-						<a href="#" class="symbol symbol-70 flex-shrink-0">
-							<img src="assets/media/stock-600x400/img-2.jpg" title="" alt="" />
-						</a>
+						<span class="symbol symbol-lg-60 symbol-40 symbol-light-success">
+							<span class="symbol-label font-size-h2 font-weight-bold">
+								<!--begin::Svg Icon | path:assets/media/svg/icons/Design/PenAndRuller.svg-->
+								<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+									<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+										<rect x="0" y="0" width="24" height="24"/>
+										<path d="M5,2 L19,2 C20.1045695,2 21,2.8954305 21,4 L21,6 C21,7.1045695 20.1045695,8 19,8 L5,8 C3.8954305,8 3,7.1045695 3,6 L3,4 C3,2.8954305 3.8954305,2 5,2 Z M11,4 C10.4477153,4 10,4.44771525 10,5 C10,5.55228475 10.4477153,6 11,6 L16,6 C16.5522847,6 17,5.55228475 17,5 C17,4.44771525 16.5522847,4 16,4 L11,4 Z M7,6 C7.55228475,6 8,5.55228475 8,5 C8,4.44771525 7.55228475,4 7,4 C6.44771525,4 6,4.44771525 6,5 C6,5.55228475 6.44771525,6 7,6 Z" fill="#000000" opacity="0.3"/>
+										<path d="M5,9 L19,9 C20.1045695,9 21,9.8954305 21,11 L21,13 C21,14.1045695 20.1045695,15 19,15 L5,15 C3.8954305,15 3,14.1045695 3,13 L3,11 C3,9.8954305 3.8954305,9 5,9 Z M11,11 C10.4477153,11 10,11.4477153 10,12 C10,12.5522847 10.4477153,13 11,13 L16,13 C16.5522847,13 17,12.5522847 17,12 C17,11.4477153 16.5522847,11 16,11 L11,11 Z M7,13 C7.55228475,13 8,12.5522847 8,12 C8,11.4477153 7.55228475,11 7,11 C6.44771525,11 6,11.4477153 6,12 C6,12.5522847 6.44771525,13 7,13 Z" fill="#000000"/>
+										<path d="M5,16 L19,16 C20.1045695,16 21,16.8954305 21,18 L21,20 C21,21.1045695 20.1045695,22 19,22 L5,22 C3.8954305,22 3,21.1045695 3,20 L3,18 C3,16.8954305 3.8954305,16 5,16 Z M11,18 C10.4477153,18 10,18.4477153 10,19 C10,19.5522847 10.4477153,20 11,20 L16,20 C16.5522847,20 17,19.5522847 17,19 C17,18.4477153 16.5522847,18 16,18 L11,18 Z M7,20 C7.55228475,20 8,19.5522847 8,19 C8,18.4477153 7.55228475,18 7,18 C6.44771525,18 6,18.4477153 6,19 C6,19.5522847 6.44771525,20 7,20 Z" fill="#000000"/>
+									</g>
+								</svg>
+
+								<!--end::Svg Icon-->
+							</span>
+						</span>
 					</div>
 
 					<!--end::Item-->
@@ -76,87 +88,7 @@
 
 					<!--end::Separator-->
 
-					<!--begin::Item-->
-					<div class="d-flex align-items-center justify-content-between py-8">
-						<div class="d-flex flex-column mr-2">
-							<a href="#" class="font-weight-bold text-dark-75 font-size-lg text-hover-primary">CameraMax</a>
-							<span class="text-muted">Professional camera for edge cutting shots</span>
-							<div class="d-flex align-items-center mt-2">
-								<span class="font-weight-bold mr-1 text-dark-75 font-size-lg">$ 150</span>
-								<span class="text-muted mr-1">for</span>
-								<span class="font-weight-bold mr-2 text-dark-75 font-size-lg">3</span>
-								<a href="#" class="btn btn-xs btn-light-success btn-icon mr-2">
-									<i class="ki ki-minus icon-xs"></i>
-								</a>
-								<a href="#" class="btn btn-xs btn-light-success btn-icon">
-									<i class="ki ki-plus icon-xs"></i>
-								</a>
-							</div>
-						</div>
-						<a href="#" class="symbol symbol-70 flex-shrink-0">
-							<img src="assets/media/stock-600x400/img-3.jpg" title="" alt="" />
-						</a>
-					</div>
-
-					<!--end::Item-->
-
-					<!--begin::Separator-->
-					<div class="separator separator-solid"></div>
-
-					<!--end::Separator-->
-
-					<!--begin::Item-->
-					<div class="d-flex align-items-center justify-content-between py-8">
-						<div class="d-flex flex-column mr-2">
-							<a href="#" class="font-weight-bold text-dark text-hover-primary">4D Printer</a>
-							<span class="text-muted">Manufactoring unique objects</span>
-							<div class="d-flex align-items-center mt-2">
-								<span class="font-weight-bold mr-1 text-dark-75 font-size-lg">$ 1450</span>
-								<span class="text-muted mr-1">for</span>
-								<span class="font-weight-bold mr-2 text-dark-75 font-size-lg">7</span>
-								<a href="#" class="btn btn-xs btn-light-success btn-icon mr-2">
-									<i class="ki ki-minus icon-xs"></i>
-								</a>
-								<a href="#" class="btn btn-xs btn-light-success btn-icon">
-									<i class="ki ki-plus icon-xs"></i>
-								</a>
-							</div>
-						</div>
-						<a href="#" class="symbol symbol-70 flex-shrink-0">
-							<img src="assets/media/stock-600x400/img-4.jpg" title="" alt="" />
-						</a>
-					</div>
-
-					<!--end::Item-->
-
-					<!--begin::Separator-->
-					<div class="separator separator-solid"></div>
-
-					<!--end::Separator-->
-
-					<!--begin::Item-->
-					<div class="d-flex align-items-center justify-content-between py-8">
-						<div class="d-flex flex-column mr-2">
-							<a href="#" class="font-weight-bold text-dark text-hover-primary">MotionWire</a>
-							<span class="text-muted">Perfect animation tool</span>
-							<div class="d-flex align-items-center mt-2">
-								<span class="font-weight-bold mr-1 text-dark-75 font-size-lg">$ 650</span>
-								<span class="text-muted mr-1">for</span>
-								<span class="font-weight-bold mr-2 text-dark-75 font-size-lg">7</span>
-								<a href="#" class="btn btn-xs btn-light-success btn-icon mr-2">
-									<i class="ki ki-minus icon-xs"></i>
-								</a>
-								<a href="#" class="btn btn-xs btn-light-success btn-icon">
-									<i class="ki ki-plus icon-xs"></i>
-								</a>
-							</div>
-						</div>
-						<a href="#" class="symbol symbol-70 flex-shrink-0">
-							<img src="assets/media/stock-600x400/img-8.jpg" title="" alt="" />
-						</a>
-					</div>
-
-					<!--end::Item-->
+					
 				</div>
 
 				<!--end::Wrapper-->
@@ -165,11 +97,11 @@
 				<div class="offcanvas-footer">
 					<div class="d-flex align-items-center justify-content-between mb-4">
 						<span class="font-weight-bold text-muted font-size-sm mr-2">Total</span>
-						<span class="font-weight-bolder text-dark-50 text-right">$1840.00</span>
+						<span class="font-weight-bolder text-dark-50 text-right">$78.00</span>
 					</div>
 					<div class="d-flex align-items-center justify-content-between mb-7">
-						<span class="font-weight-bold text-muted font-size-sm mr-2">Sub total</span>
-						<span class="font-weight-bolder text-primary text-right">$5640.00</span>
+						<span class="font-weight-bold text-muted font-size-sm mr-2">Discounted Price</span>
+						<span class="font-weight-bolder text-primary text-right">$56.00</span>
 					</div>
 					<div class="text-right">
 						<button type="button" class="btn btn-primary text-weight-bold">Place Order</button>
